Fixed Button scss file issue by overwriting line in dark mode

--- a/_sass/minima/Dark_Mode.scss
+++ b/_sass/minima/Dark_Mode.scss
@@ -6,7 +6,7 @@ $dark-grey : #121212;
 $overlay: mix($dark-grey, white, 95%);
 $overlay-light: mix($dark-grey, white, 86%);
 
-html, body, input, textarea, select, button {   
+html, body, input, textarea, select {   
   color: $high-emph !important;
   background-color: $dark-grey !important;
 }
